<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Playingsong">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="2216dp"
        android:layout_height="1620dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:srcCompat="@drawable/player1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="175dp"
        android:layout_height="107dp"
        android:alpha="50"
        android:contentDescription="@string/musiclabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/musiclabel"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/songname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="20dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/songname"
        android:textColor="#E40E72"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songname"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="258dp"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.06">

        <ImageView
            android:id="@+id/previous"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            android:padding="20dp"
            app:srcCompat="@drawable/previousimg"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="20dp"
            app:srcCompat="@drawable/pauseimg" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/pause"
            android:padding="20dp"
            app:srcCompat="@drawable/nextimg" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>